# simple-ptt-commenter-analyzer-tauri

./: index.html  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/src/: config.rs  error.rs  main.rs  scraper.rs
