[package]
name = "ptt_scraper_tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ptt_scraper_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- 專案核心依賴 ---
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
scraper = "0.24.0"
thiserror = "2.0.16"
futures = "0.3"

# --- 新增 Tauri Opener 插件 ---
tauri-plugin-opener = "2.5.0"
tauri-plugin-clipboard = "2.0.1"

once_cell = "1.19"
regex = "1.10"
